update song and index

--- a/index.html
+++ b/index.html
@@ -2936,7 +2936,7 @@
                   </p>
                   <audio id="birthdayAudio" controls loop>
                     <source
-                      src="https://pagalnew.com/128-downloads/50762"
+                      src="./song.mp3"
                       type="audio/mpeg"
                     />
                     Your browser does not support the audio element.
